feat: Implementa sistema de autenticação e autorização
- Adiciona endpoints de registro e login com hashing de senha (BCrypt) e geração de token JWT.

- Implementa roteamento no frontend com páginas de Login, Cadastro e Home.

- Cria um AuthContext global para gerenciar o estado de login do usuário.

- Torna a UI e as chamadas de API dinâmicas, reagindo ao estado de autenticação.